fix(shelf): images it's break in large, medium devices

--- a/src/styles/partials/_shelf.scss
+++ b/src/styles/partials/_shelf.scss
@@ -97,6 +97,7 @@
 		@media screen and (min-width: 1281px) {
 			img {
 				width: 60.24096385542169%;
+				object-fit: contain;
 			}
 		}
 	}
